--- a/index.html
+++ b/index.html
@@ -634,13 +634,13 @@
             <div class="two-cols">
                 <div class="two-cols-content">
                     <div style="-webkit-transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="two-cols-title">
-                        <h2 css="/" class="l">ASSIURAZIONI</h2>
+                        <h2 css="/" class="l">ASSICURAZIONI</h2>
                     </div>
                     <div style="-webkit-transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="two-cols-text">
                         <p class="body-l">Scegli comodamente la tua assicurazione personalizzata con un solo click. Affidati ad uno dei nostri partner.</p>
                     </div>
                     <div style="-webkit-transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(16px, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="two-cols-button">
-                        <a class="button w-button" href="/es/electropass">Richiedi un preventivo gratuito</a>
+                        <a class="button w-button" href="">Richiedi un preventivo gratuito</a>
                     </div>
                 </div>
                 <div class="two-cols-visual">
@@ -675,7 +675,7 @@
                     <img src="fonts/YK0qtud6rUUL.svg" loading="lazy" alt="" class="pioneers-image hide">
                     <div class="screens-wrapper">
                         <img src="images/tLeg0UbmshcZ.jpg" loading="lazy" alt="" class="screen-bg-placeholder">
-                        <img src="images/9bx3QijnMhtV.png" loading="lazy" alt="" class="screen-image">
+                        <img src="images/img2.jpg" loading="lazy" alt="" class="screen-image">
                     </div>
                 </div>
             </div>
@@ -705,7 +705,7 @@
                 <div class="two-cols-visual">
                     <img src="images/qxFWPG2rTdEE.png" loading="lazy" alt="" class="pioneers-image hide">
                     <div class="screens-wrapper">
-                        <img src="images/tLeg0UbmshcZ.jpg" loading="lazy" alt="" class="screen-bg-placeholder">
+                        <img src="images/img1.jpg" loading="lazy" alt="" class="screen-bg-placeholder">
                         <img src="images/puLvZryz3e3B.png" loading="lazy" alt="" class="screen-image">
                     </div>
                 </div>
