--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
                     <img src="images/qxFWPG2rTdEE.png" loading="lazy" alt="" class="pioneers-image hide">
                     <div class="screens-wrapper">
                         <img src="images/img1.jpg" loading="lazy" alt="" class="screen-bg-placeholder">
-                        <img src="images/puLvZryz3e3B.png" loading="lazy" alt="" class="screen-image">
+                        <img src="images/img1.jpg" loading="lazy" alt="" class="screen-image">
                     </div>
                 </div>
             </div>
